<resources>
    <string name="app_name">BBBBB</string>
    <string name="action_settings">Settings</string>
    <string name="title">Bedlam\'s Boy Band Battle Beadledom</string>
    <string name="title_activity_main_menu">mainMenu</string>
    <string name="newGameButton">New Game</string>
    <string name="settingsButton">Settings</string>
    <string name="highScoresButton">High Scores</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_continue_game">continueGame</string>
    <string name="tapToBegin">Tap to Begin!</string>
    <string name="settingsTitle">Settings</string>
    <string name="eraseFileButton">Erase File</string>
    <string name="title_activity_battle_arena">BattleArena</string>
    <string name="title_activity_high_scores">High Scores</string>
    <string name="title_activity_new_game" />
    <string name="nick"> Nick Sync</string>
    <string name="title_activity_select_power">SelectPower</string> 
    <string name="power1"> Power 1 </string>
    <string name="power2"> Power 2 </string>
    <string name="power3"> Power 3 </string>
    <string name="power4"> Power 4 </string>
    <string name="newGame"> New Game </string>
    <string name="continueGame"> Continue Game </string>
    <string name="score"> High Scores </string>
    <string name="fight"> FIGHT </string>
    <string name="notEffective">\'s attack is super effective!</string>
    <string name="title_activity_opening_cutscene">OpeningCutscene</string>
    <string name="title_activity_battle_summary">BattleSummary</string>
    <string name="continueButton">Continue</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_first_scene">FirstScene</string>
    <string name="title_activity_second_scene">SecondScene</string>
    <string name="title_activity_avoid_scene">AvoidScene</string>
    <string name="title_activity_third_scene">ThirdScene</string>
    <string name="title_activity_level_up">LevelUp</string>
    <string name="title_activity_fourth_scene">FourthScene</string>
    <string name="title_activity_fifth_scene">FifthScene</string>
    <string name="title_activity_spare_scene">SpareScene</string>
    <string name="title_activity_sixth_scene">SixthScene</string>
    <string name="title_activity_seventh_scene">SeventhScene</string>
    <string name="title_activity_just_friends">justFriends</string>
    <string name="title_activity_tsundere_test">tsundereTest</string>
    <string name="title_activity_good_friends">goodFriends</string>
    <string name="title_activity_love_scene">loveScene</string>
    <string name="title_activity_eighth_scene">EighthScene</string>
    <string name="title_activity_ninth_scene">NinthScene</string>
    <string name="cat"> cat </string>
    <string name="con"> Continue </string>
    <string name="enemy"> enemy </string>
    <string name="girl"> girl </string>
    <string name="magic"> magic </string>
    <string name="bak"> bak </string>
    <string name="excalibur"> excalibur</string>
    <string name="Battle"> Battle</string>
    <string name="roulette"> roulette</string>
    <string name="dice"> dice</string>
    <string name="allin"> allin</string>
    <string name="heart"> heart</string>
    <string name="dbName">High Scores</string>
</resources>
