<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_battle"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.john.bbbbb.Battle">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageView
            android:id="@+id/hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Hero"
            android:src="@drawable/nick"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/enemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Enemy"
            android:src="@drawable/enemy"
            android:layout_alignTop="@+id/hero"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

        <ImageView
            android:id="@+id/bak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bak"

            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <ImageView
            android:id="@+id/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/heart"
            android:src="@drawable/heart"

            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <!--android:layout_alignTop="@+id/con"
        android:layout_toRightOf="@+id/roulette"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/con"
            android:id="@+id/con"
            android:layout_above="@+id/enemy"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
